--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -17,12 +17,6 @@
     padding: 10px;
 }
 
-.footer{
-    grid-area: footer;
-    background-color: aquamarine;
-    padding: 10px;
-}
-
 .topnav{
     overflow: hidden;
     background-color: azure;
@@ -41,3 +35,37 @@
     background-color: antiquewhite;
     color: black;
 }
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    resize: vertical;
+  }
+  
+  input[type=submit], input[type=reset] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 5px;
+  }
+
+  .container {
+    width: 400px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+
+  .erro {
+    color: red;
+    display: block;
+    text-align: right;
+  }
