--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -69,3 +69,33 @@ input[type=text], input[type=email], select, textarea {
     display: block;
     text-align: right;
   }
+
+  
+/*flexbox*/
+
+  .flexbox {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    box-sizing: border-box;
+    margin: 0px -10px;
+  }
+  
+  .item {
+    box-sizing: border-box;
+    width: 50%;
+    margin-bottom: 20px;
+    padding: 0px 10px;
+  }
+  
+  .content {
+    color: #242424;
+    background-color: #1bbefe;
+    font-weight: 600;
+    text-align: center;
+    box-sizing: border-box;
+    height: 100%;
+    padding: 10px;
+  }
