--- a/src/components/flexbox.css
+++ b/src/components/flexbox.css
@@ -17,7 +17,7 @@
   
   .content {
     color: #242424;
-    background-color: #1bbefe;
+    background-color: white;
     font-weight: 600;
     text-align: center;
     box-sizing: border-box;
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content:center;
     align-items: stretch;
     box-sizing: border-box;
     margin: 0px -10px;
@@ -36,17 +36,22 @@
   
   .itemabout {
     box-sizing: border-box;
-    width: 25%;
+    width: 15%;
     margin-bottom: 20px;
     padding: 0px 10px;
   }
   
   .contentabout {
     color: #242424;
-    background-color: #1bbefe;
-    font-weight: 600;
+    background-color: #ffffff;
+    font-weight: 500;
     text-align: center;
     box-sizing: border-box;
     height: 100%;
-    padding: 10px;
+    padding: 0 25px 20px;;
+  }
+
+  .contentabout h2{
+    padding: 15px;
+    color: #04AA6D;
   }
