--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,7 +1,7 @@
 .footer{
     grid-area: footer;
-    background-color: aquamarine;
+    background-color: white;
     padding: 10px;
-    color: gray;
+    color: #04AA6D;
     text-align: center;
 }
